--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
+  "name": "pokemon-list",
   "version": "1.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +11,7 @@
     "lint:strict": "eslint --max-warnings=0 src",
     "typecheck": "tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test": "jest",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
@@ -18,6 +19,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.1",
+    "@mui/material": "^5.13.7",
+    "@tanstack/react-query": "^4.13.0",
+    "axios": "^1.4.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.15",
@@ -25,10 +31,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
+    "zustand": "^4.3.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.3.0",
+    "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.9",
