--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokemon-list",
   "version": "1.0.1",
   "private": false,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -58,7 +59,6 @@
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.47",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5"
   },
