--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.1",
     "@mui/material": "^5.13.7",
-    "@tanstack/react-query": "^4.13.0",
-    "axios": "^1.4.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
+    "axios": "^1.7.7",
     "clsx": "^2.0.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.15",
