--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.1",
-    "@mui/material": "^5.13.7",
-    "@mui/icons-material": "^5.13.7",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
     "axios": "^1.7.7",
@@ -31,9 +29,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "tailwind-merge": "^2.5.4",
-    "zustand": "^4.3.6",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
