--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.1",
+    "@faker-js/faker": "^9.1.0",
+    "@mui/material": "^6.1.6",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
     "axios": "^1.7.7",
     "clsx": "^2.0.0",
+    "faker": "^6.6.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
     "next": "^14.2.15",
     "react": "^18.2.0",
@@ -42,6 +46,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.11",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
