--- a/.prettierrc
+++ b/.prettierrc
@@ -18,5 +18,7 @@
     "^[./]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": "length",
+  "plugins": ["prettier-plugin-sort-imports"],
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"]
 }
